--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "source": "src/index.html",
   "browserslist": "> 0.5%, last 3 versions, not dead",
   "scripts": {
-    "dev": "parcel",
-    "build": "parcel build"
+    "deploy": "npm run build && gh-pages -d dist",
+    "dev": "parcel ./src/index.html --no-cache",
+    "build": "parcel build ./src/index.html --no-source-maps --public-url . --no-cache"
   },
   "repository": {
     "type": "git",
@@ -17,11 +18,14 @@
   "bugs": {
     "url": "https://github.com/oksanaweb/todolist/issues"
   },
-  "homepage": "https://github.com/oksanaweb/todolist#readme",
+  "homepage": "https://oksanaweb.github.io/todolist/",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.0",
     "concat": "^1.0.3",
     "parcel": "^2.8.0",
     "sass": "^1.56.1"
+  },
+  "dependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
